@@ -13,6 +13,10 @@ public:
 	ExpirationHandler(SSDB *ssdb);
 	~ExpirationHandler();
 	int set_ttl(const Bytes &key, int64_t ttl);
+	// "In Redis 2.6 or older the command returns -1 if the key does not exist
+	// or if the key exist but has no associated expire. Starting with Redis 2.8.."
+	// I stick to Redis 2.6
+	int64_t get_ttl(const Bytes &key);
 
 private:
 	SSDB *ssdb;
