@@ -1,8 +1,9 @@
 * 1.6.8.7 (2014-05-15)
 	* New features:
+		- Add ttl command(2014-05-26)
+		- Add `flushdb list`(2014-05-22)
 		- Support Android build
 		- Add sync speed limit
-		- Add `flushdb list`(2014-05-22)
 * 1.6.8.6 (2014-03-29)
 	* New features:
 		- Reduce round trip time for single request(2014-04-04)
